name:                yesod-auth-bcryptdb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yusent/yesod-auth-bcryptdb#readme
license:             BSD3
license-file:        LICENSE
author:              Yusent Chig
maintainer:          yusent@protonmail.com
copyright:           2017 Yusent Chig
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yusent/yesod-auth-bcryptdb
