name:                yesod-auth-bcryptdb
version:             0.1.0.0
synopsis:            Yesod.Auth.BcryptDB plugin
description:         Yesod.Auth.BcryptDB plugin
homepage:            https://github.com/yusent/yesod-auth-bcryptdb
license:             MIT
license-file:        LICENSE
author:              Yusent Chig
maintainer:          yusent@protonmail.com
copyright:           2017 Yusent Chig
category:            Yesod Authentication
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yesod.Auth.BCryptDB
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yusent/yesod-auth-bcryptdb
