name:                yesod-auth-bcryptdb
version:             0.1.0.0
synopsis:            Yesod.Auth.BcryptDB plugin
description:         Yesod.Auth.BcryptDB plugin
homepage:            https://github.com/yusent/yesod-auth-bcryptdb
license:             MIT
license-file:        LICENSE
author:              Yusent Chig
maintainer:          yusent@protonmail.com
copyright:           2017 Yusent Chig
category:            Yesod Authentication
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       aeson
                     , base >= 4 && < 5
                     , bcrypt >= 0.0.10 && < 0.1
                     , bytestring >= 0.9.1.4
                     , persistent >= 2.1 && < 2.8
                     , text >= 0.7
                     , yesod-auth >= 1.4.18 && < 1.5
                     , yesod-core >= 1.4 && < 1.5
                     , yesod-form >= 1.4 && < 1.5
                     , yesod-persistent >= 1.2
  default-language:    Haskell2010
  exposed-modules:     Yesod.Auth.BCryptDB
  ghc-options:         -Wall
  hs-source-dirs:      src

source-repository head
  type:     git
  location: https://github.com/yusent/yesod-auth-bcryptdb
